<resources>
    <string name="app_name">Summarising Tweets</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_sets">View Sets of Accounts</string>
    <string name="view_accounts">View Accounts Followed</string>
    <string name="view_timeline">View Timeline</string>
    <string name="twitter">Twitter</string>
    <string name="create_new_set">Create New Set</string>
    <string name="enter_name_here">Enter Name Here</string>
    <string name="create">Create</string>
    <string name="add_accounts">Add Accounts</string>
    <string name="view_data">View Data</string>
    <string name="done">Done</string>
    <string name="set_file_names_file">SetFilenames.txt</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="chart_type">Chart Type:</string>
    <string name="number_of_elements">Number of elements in chart:</string>
    <string name="select_chart_type">Select Chart Type</string>
    <string-array name="charts">
        <item>Bar Chart</item>
        <item>Pie Chart</item>
        <item>Table</item>
    </string-array>
</resources>
