<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:text="@string/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/txtDashboard"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/view_timeline"
            android:id="@+id/btnMyAccount"/>

        <Button
            android:id="@+id/btnAccounts"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="viewAccounts"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/view_accounts" />

        <Button
            android:id="@+id/btnSets"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="viewSets"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/view_sets" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>